--- a/stil/stilark.css
+++ b/stil/stilark.css
@@ -5,8 +5,9 @@ body{
     margin: 0;
     background-image: linear-gradient( rgb(255, 196, 0), rgb(252, 235, 0));
     height: 100%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 img{    
     width: 100%;
@@ -86,6 +87,7 @@ head{
     margin-left: 100px;
     margin-right: 50px;
     grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+    ; 
     align-items: center;
 }
 .mainNav a{
@@ -203,10 +205,26 @@ footer{
     grid-area: footerA;
 
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
     bottom: 0;
 }
+
 .codeScreen{
+    width: 40%;
+    height: 40%;
+}
+.githubWorks{
+    width: 50%;
+    height: 50%;
+}
+.flexVsGrid{
+
+}
+.cssflextxt{
+    width: 50%;
+    height: 50%;
+}
+.cssgridtxt{
     width: 40%;
     height: 40%;
 }
